--- a/code/02_model/grouped_models.Rmd
+++ b/code/02_model/grouped_models.Rmd
@@ -25,12 +25,13 @@ knitr::opts_chunk$set(
 	include = TRUE,
 	message = FALSE,
 	warning = FALSE)
+#rm(list=ls()) # Clear out environment if necessary
 ```
 
 
 ```{r include=FALSE}
 source("code/packages.R")
-#rm(list=ls()) # Clear out environment if necessary
+source("code/extras.R")
 ```
 
 # Load data
@@ -49,12 +50,14 @@ shark_daily_td
 
 ```{r}
 ## Check distributions so we know how to model
-## Max depth
+## Max temp
 shark_daily_td %>% ggplot() + geom_histogram(aes(x = daily_max_temp))
-## Mean depth
+## Mean temp
+shark_daily_td %>% ggplot() + geom_histogram(aes(x = daily_mean_temp))
+## Min temp
 shark_daily_td %>% ggplot() + geom_histogram(aes(x = daily_min_temp))
-## Min depth
-shark_daily_td %>% ggplot() + geom_histogram(aes(x = daily_max_depth))
+## SD temp
+shark_daily_td %>% ggplot() + geom_histogram(aes(x = daily_temp_sd))
 ```
 
 All look approximately normal
@@ -84,7 +87,7 @@ Almost 1:1 relationship between SST and max internal body temperature
 ```
 
 ## Plot results
-```{r}
+```{r fig.height=80/25.4, fig.width=80/25.4}
 mod1.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -98,33 +101,47 @@ newdata1 <- mod1 %>%
   geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
   geom_line() +
   geom_point(data=shark_daily_td,  aes(y=daily_max_temp, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-  theme_minimal() +
+  theme_bjc() +
  # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
   ylab("Daily max shark temp (°C)") + 
   xlab("\nSST (°C)"))
-ggsave(mod1_plot, file = "output/mod1_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
+```
+
+
+```{r fig.height=80/25.4, fig.width=80/25.4}
+ggsave(mod1_plot, file = "output/mod1_plot.pdf", 
+       width = 100, height = 100, units = "mm", dpi = 300)
 ```
 
 ## Add in time-series data
 ```{r  fig.width = 180/25.4, fig.height = 60/25.4}
 (daily_max_temp_model_plot <- ggarrange(shark_daily_maxtemp_plot, mod1_plot, ncol = 2, widths = c(2,1)))
-ggsave(daily_max_temp_model_plot, file = "output/daily_max_temp_model_plot.pdf", width = 180, height = 60, units = "mm", dpi = 300)
+ggsave(daily_max_temp_model_plot, file = "output/daily_max_temp_model_plot.pdf", 
+       width = 180, height = 60, units = "mm", dpi = 300)
 ```
 
 
 ##### Model 2a: Mean daily temp ~ SST #####
 
 ## Model formula
+Will try glm and simple gam
 ```{r}
-mod2a <- glm(daily_mean_temp ~ SST, data = shark_daily_td, family = gaussian)
+mod2ai <- glm(daily_mean_temp ~ SST, data = shark_daily_td, family = gaussian)
+mod2aii <- gam(daily_mean_temp ~ s(SST, bs = "cs", k =3), data = shark_daily_td, family = gaussian)
 ```
 
 ## Model validation
 ```{r}
 # Dharma resids
-mod2a %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
-mod2a %>% performance::check_outliers()
-mod2a %>% performance::r2()
+mod2ai %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
+mod2ai %>% performance::check_outliers()
+mod2ai %>% performance::r2()
+
+mod2aii %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
+mod2aii %>% performance::check_outliers()
+mod2aii %>% performance::r2()
+
+AIC(mod2ai, mod2aii)
 ```
 
 
@@ -138,25 +155,30 @@ All look approximately normal
 ```
 
 ## Plot results
-```{r}
+```{r fig.height=80/25.4, fig.width=80/25.4}
 mod2a.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
-newdata2a <- mod2a %>% 
+newdata2a <- mod2ai %>% 
   emmeans(~SST, at = mod2a.grid) %>% 
   regrid() %>% 
   as_tibble()
 
-(mod2a_plot <- 
+(mod2ai_plot <- 
     ggplot(newdata2a, aes(y = emmean, x = SST)) +
     geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
     geom_line() +
     geom_point(data=shark_daily_td,  aes(y=daily_mean_temp, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
+    theme_bjc() +
     # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
     ylab("Daily mean temp (°C)") + 
     xlab("\nSST (°C)"))
-ggsave(mod2a_plot, file = "output/mod2a_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
+```
+
+# Save
+```{r fig.height=80/25.4, fig.width=80/25.4}
+ggsave(mod2a_plot, file = "output/mod2a_plot.pdf", 
+       width = 100, height = 100, units = "mm", dpi = 300)
 ```
 
 ## Add in time-series data
@@ -176,15 +198,24 @@ Need a GAM
 
 
 ```{r}
-mod2b <- gam(daily_temp_sd ~ s(SST, bs = "cs"), data = shark_daily_td)
+mod2bi <- gam(daily_temp_sd ~ s(SST, bs = "cs", k = 3), family = tw(), data = shark_daily_td)
+mod2bii <- gam(daily_temp_sd ~ s(SST, bs = "cs", k = 3), family = Gamma(), data = shark_daily_td)
 ```
 
 ## Model validation
 ```{r}
 # Dharma resids
-mod2b %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
-mod2b %>% performance::check_outliers()
-mod2b %>% performance::r2()
+mod2bi %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
+mod2bi %>% performance::check_outliers()
+mod2bi %>% performance::r2()
+
+mod2bii %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
+mod2bii %>% performance::check_outliers()
+mod2bii %>% performance::r2()
+
+AIC(mod2bi, mod2bii)
+
+mod2b <- mod2bii
 ```
 
 ## Results
@@ -193,7 +224,7 @@ mod2b %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height=80/25.4, fig.width=80/25.4}
 mod2b.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -203,26 +234,33 @@ newdata2b <- mod2b %>%
   as_tibble()
 
 (mod2b_plot <- 
-    ggplot(newdata2b, aes(y = emmean, x = SST)) +
+    ggplot(newdata2b, aes(y = response, x = SST)) +
     geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
     geom_line() +
     geom_point(data=shark_daily_td,  aes(y=daily_temp_sd, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
+    theme_bjc() +
     # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
     ylab("Std deviation in\ndaily temps (°C)") + 
     xlab("\nSST (°C)"))
-ggsave(mod2b_plot, file = "output/mod2b_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
+```
+
+
+```{r fig}
+ggsave(mod2b_plot, file = "output/mod2b_plot.pdf", 
+       width = 80, height = 80, units = "mm", dpi = 300)
 ```
 
 
 
 ##### Model 2b: Delta between Mean and Max daily temps ~ SST #####
 ### NOT GOING TO USE THIS - SD SHOULD BE SUFFICIENT
-## Model formula
-Need a GAM
 
+
+## Model formula
+Try with GAM
 ```{r}
-mod2c <- gam(temp_diff ~ s(SST, bs = "cs"), data = shark_daily_td)
+mod2c <- gam(temp_diff ~ s(SST, bs = "cs", k =3), data = shark_daily_td %>% 
+  mutate(temp_diff = daily_max_temp - daily_min_temp))
 ```
 
 ## Model validation
@@ -239,7 +277,7 @@ mod2c %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height=80/25.4, fig.width=80/25.4}
 mod2c.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -249,13 +287,13 @@ newdata2c <- mod2c %>%
   as_tibble()
 
 (mod2c_plot <- 
-    ggplot(newdata2, aes(y = emmean, x = SST)) +
+    ggplot(newdata2c, aes(y = emmean, x = SST)) +
     geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
     geom_line() +
-    geom_point(data=shark_daily_td,  aes(y=temp_diff, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
+    geom_point(data=shark_daily_td %>% mutate(temp_diff = daily_max_temp - daily_min_temp),  aes(y=temp_diff, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
+    theme_bjc() +
     # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-    ylab("Diff between mean and\nmax daily temps (°C)") + 
+    ylab("Diff between min and\nmax daily temps (°C)") + 
     xlab("\nSST (°C)"))
 ggsave(mod2c_plot, file = "output/mod2c_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
 ```
@@ -266,15 +304,24 @@ ggsave(mod2c_plot, file = "output/mod2c_plot.pdf", width = 100, height = 100, un
 
 ## Model formula
 ```{r}
-mod3 <- glm(daily_min_temp ~ SST, data = shark_daily_td, family = gaussian)
+mod3i <- glm(daily_min_temp ~ SST, data = shark_daily_td, family = gaussian)
+mod3ii <- gam(daily_min_temp ~ s(SST, bs = "cs", k = 3), data = shark_daily_td, family = gaussian)
 ```
 
 ## Model validation
 ```{r}
 # Dharma resids
-mod3 %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
-mod3 %>% performance::check_outliers()
-mod3 %>% performance::r2()
+mod3i %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
+mod3i %>% performance::check_outliers()
+mod3i %>% performance::r2()
+
+mod3ii %>% simulateResiduals(plot = TRUE) # Look ok apart from some quantile deviation
+mod3ii %>% performance::check_outliers()
+mod3ii %>% performance::r2()
+
+AIC(mod3i, mod3ii)
+
+mod3 <- mod3ii
 ```
 
 
@@ -284,7 +331,7 @@ mod3 %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height=80/25.4, fig.width=80/25.4}
 mod3.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -298,10 +345,14 @@ newdata3 <- mod3 %>%
   geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
   geom_line() +
   geom_point(data=shark_daily_td,  aes(y=daily_min_temp, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-  theme_minimal() +
+  theme_bjc() +
  # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
   ylab("Daily min temp (°C)") + 
   xlab("\nSST (°C)"))
+```
+
+# Save
+```{r fig.height=80/25.4, fig.width=80/25.4}
 ggsave(mod3_plot, file = "output/mod3_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
 ```
 
@@ -323,6 +374,7 @@ ggsave(daily_min_temp_model_plot, file = "output/daily_min_temp_model_plot.pdf",
 ## Model formula
 ```{r}
 mod4 <- glm(daily_max_depth ~ SST, data = shark_daily_td, family = gaussian)
+mod4 <- gam(daily_max_depth ~ SST, data = shark_daily_td, family = gaussian)
 ```
 
 ## Model validation
@@ -339,7 +391,7 @@ mod4 %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height=80/25.4, fig.width=80/25.4}
 mod4.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -353,10 +405,14 @@ newdata4 <- mod4 %>%
   geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
   geom_line() +
   geom_point(data=shark_daily_td,  aes(y=daily_max_depth, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-  theme_minimal() +
+  theme_bjc() +
  # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
   ylab("Daily max depth (m)") + 
   xlab("\nSST (°C)"))
+```
+
+
+```{r fig.height=80/25.4, fig.width=80/25.4}
 ggsave(mod4_plot, file = "output/mod4_plot.pdf", width = 100, height = 100, units = "mm", dpi = 300)
 ```
 
@@ -391,7 +447,7 @@ mod5 %>% performance::r2()
 ```
 
 ## Plot results
-```{r}
+```{r fig.height=80/25.4, fig.width=80/25.4}
 mod5.grid <- shark_daily_td %>% 
   with(list(SST = seq_range(SST, n = 100)))
 
@@ -405,7 +461,7 @@ newdata5 <- mod5 %>%
     geom_ribbon(aes(ymin=lower.CL, ymax=upper.CL), color=NA, alpha=0.3) +
     geom_line() +
     geom_point(data=shark_daily_td,  aes(y=daily_mean_depth, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
+    theme_bjc() +
     # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
     ylab("Daily mean depth (m)") + 
     xlab("\nSST (°C)") +
@@ -461,7 +517,7 @@ newdata6 <- mod6 %>%
     geom_ribbon(aes(ymin = asymp.LCL, ymax = asymp.UCL), color=NA, alpha=0.3) +        # Had to change the ymin and max names as the model conducted in MASS
     geom_line() +
     geom_point(data=shark_daily_td,  aes(y=daily_min_depth, x = SST), fill = "grey40", col = "black", alpha = 0.4, pch = 21) +
-    theme_minimal() +
+    theme_bjc() +
     # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
     ylab("Daily min depth (m)") + 
     xlab("\nSST (°C)"))
@@ -479,6 +535,9 @@ ggsave(daily_min_depth_model_plot, file = "output/daily_min_depth_model_plot.pdf
 
 
 
+```{r}
+# END #
+```
 
 
 
