--- a/code/03_graphics/graphics_SST_temp.Rmd
+++ b/code/03_graphics/graphics_SST_temp.Rmd
@@ -30,6 +30,7 @@ knitr::opts_chunk$set(
 
 ```{r include=FALSE}
 source("code/packages.R")
+source("code/extras.R")
 #rm(list=ls()) # Clear out environment if necessary
 ```
 
@@ -51,7 +52,7 @@ SST_plot_plain <-
   geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.5) +
   scale_x_date(date_breaks = "1 months", date_labels = '%b', expand = c(0.02, 0.02)) +
   ylab("SST (°C)") +
-  theme_minimal() +
+  theme_bjc() +
   theme(axis.title.y = element_text(size = 9, hjust = 0.1, colour = "black"),
         axis.text.y = element_text(size = 9, colour = "black"),
         axis.text.x = element_blank(),
@@ -64,9 +65,15 @@ SST_plot_plain
 ```
 
 ```{r fig.width = 170/25.4, fig.height = 80/25.4}
-shark_temp_timeseries_fig <- cowplot::plot_grid(SST_plot_plain, shark_daily_temps_plot, nrow = 2, labels = c('A'), label_size = 9, label_y = 1,
+shark_temp_timeseries_fig <- 
+  cowplot::plot_grid(SST_plot_plain, shark_daily_temps_plot, nrow = 2, labels = c('A'), label_size = 9, label_y = 1,
                                                rel_heights = c(0.6, 1.5), align = "v") +
-    theme(plot.background = element_rect(color = "black")) 
+  annotate(geom = "text", label = "SST", y = 0.94, x = 0.09, colour = "black", size = 3.2, hjust = 0) +
+  annotate(geom = "text", label = expression(paste("Max", italic("T"),""[b]* "")), y = 0.61, x = 0.09, colour = "red", size = 3.2, fontface = "bold", hjust = 0) +
+  annotate(geom = "text", label = expression(paste("Mean", italic("T"),""[b]* "")), y = 0.4, x = 0.09, colour = "grey10", size = 3.2, fontface = "bold", hjust = 0) +
+  annotate(geom = "text", label = expression(paste("Min", italic("T"),""[b]* "")), y = 0.16, x = 0.09, colour = "blue", size = 3.2, fontface = "bold", hjust = 0) +
+    theme(panel.border = element_rect(color = "black", fill = "transparent", linewidth = 1))
+
 
 shark_temp_timeseries_fig
 ```
@@ -80,27 +87,37 @@ ggsave(filename = "output/shark_temp_timeseries_fig.pdf", plot = shark_temp_time
 # Combine model results
 # Source models
 ```{r}
-sourceRmd('code/02_model/grouped_models_temp.Rmd')
+sourceRmd('code/02_model/tb_models.Rmd')
 ```
 
-
-## Cowplot
+## Cowplot - all four grouped models
 ```{r fig.height = 45/25.4, fig.width = 170/25.4}
-shark_temp_model_fig <- cowplot::plot_grid(mod1_plot, mod2a_plot, mod3_plot, mod2b_plot, nrow = 1, labels = c('B', 'C', 'D', 'E'), rel_widths = c(1,1,1,1), label_size = 9, align = "h") +
-  theme(plot.background = element_rect(color = "black")) +
-  annotate("text", x = 0.08, y = 0.9, label = expression("R"^2*"=0.95"), hjust = 0, size = 2.5) +
-  annotate("text", x = 0.32, y = 0.9, label = expression("R"^2*"=0.92"), hjust = 0, size = 2.5) +
-  annotate("text", x = 0.57, y = 0.9, label = expression("R"^2*"=0.02"), hjust = 0, size = 2.5) +
-  annotate("text", x = 0.83, y = 0.9, label = expression("R"^2*"=0.83"), hjust = 0, size = 2.5)
+#shark_temp_model_fig <- cowplot::plot_grid(mod1_plot, mod2_plot, mod3_plot, mod4_sd_plot, nrow = 1, labels = c('B', 'C', 'D', 'E'), rel_widths = c(1,1,1,1), label_size = 9, align = "h") +
+#  theme(plot.background = element_rect(color = "black")) +
+#  annotate("text", x = 0.08, y = 0.9, label = expression("R"^2*"=0.95"), hjust = 0, size = 2.5) +
+#  annotate("text", x = 0.32, y = 0.9, label = expression("R"^2*"=0.92"), hjust = 0, size = 2.5) +
+#  annotate("text", x = 0.57, y = 0.9, label = expression("R"^2*"=0.02"), hjust = 0, size = 2.5) +
+#  annotate("text", x = 0.83, y = 0.9, label = expression("R"^2*"=0.83"), hjust = 0, size = 2.5)
+#shark_temp_model_fig
+```
+
+## Cowplot - with the main 3 (Max, mean and min)
+```{r fig.height = 56/25.4, fig.width = 170/25.4}
+shark_temp_model_fig <- 
+  cowplot::plot_grid(mod1_plot, mod2_plot, mod3_plot, 
+                     nrow = 1, labels = c('B', 'C', 'D'), rel_widths = c(1,1,1), label_size = 9, align = "h") +
+  annotate("text", x = 0.08, y = 0.9, label = expression("R"^2*": 0.95"), hjust = 0, size = 3) +
+  annotate("text", x = 0.41, y = 0.86, label = "Dev expl: \n95%", hjust = 0, size = 3) +
+  annotate("text", x = 0.75, y = 0.86, label = "Dev expl: \n12%", hjust = 0, size = 3)
+
 shark_temp_model_fig
 ```
-
 
 ## All together
 ```{r fig.width = 170/25.4, fig.height = 130/25.4}
 shark_temp_model_fig_final <- 
   cowplot::plot_grid(shark_temp_timeseries_fig, shark_temp_model_fig, nrow = 2, rel_heights = c(2,1.4)) +
-  theme(plot.background = element_rect(color = "black")) 
+  theme(panel.border = element_rect(color = "black", fill = "transparent", linewidth = 1))
   
 shark_temp_model_fig_final
 ```
@@ -110,7 +127,6 @@ shark_temp_model_fig_final
 ```{r}
 ggsave(filename = "output/shark_temp_model_fig_final.pdf", plot = shark_temp_model_fig_final, width = 170, height = 130, device = cairo_pdf, units = "mm", dpi = 300)
 ggsave(filename = "output/shark_temp_model_fig_final.jpg", plot = shark_temp_model_fig_final, width = 170, height = 130, device = "jpeg", units = "mm", dpi = 300)
-
 ```
 
 
